@@ -1,3 +1,11 @@
+Sun Dec  9 14:38:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/POSIX_Proactor.cpp:
+        * ace/Parse_Node.cpp:
+        * ace/SV_Message_Queue.inl:
+        * ace/SV_Message_Queue.cpp:
+          Fixed coverity errors
+
 Fri Dec  7 20:14:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_g++_common.GNU:
